# success

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-ssrs-prod-agents.yaml
src/success-stories-retrival-system/: .gitignore  Dockerfile  README.md  config.py  main.py  requirements.txt  run.ipynb  server.py
src/success-stories-retrival-system/delta_handler/azure-functions/: requirements.txt
src/success-stories-retrival-system/delta_handler/azure-functions/SharePointDeltaSync/: __init__.py  config.py
src/success-stories-retrival-system/delta_handler/azure-functions/SharePointDeltaSync/utils/: __init__.py  db_models.py  delta_indexing_pipeline.py  embedding_generator.py  sharepoint_delta_handler.py  sharepoint_manager.py  vector_store.py
src/success-stories-retrival-system/llm/: azurecustomllm.py  customllm.py
src/success-stories-retrival-system/tools/: SSchatbot.py
src/success-stories-retrival-system/utils/: auth.py  blob_manager.py  chatbot.py  document_processor.py  embedding_generator.py  markdown2docx.py  mongodb_singleton.py  rag_pipeline.py  rag_pipeline_index.py  request_context.py  session_history_manager.py  sharepoint_manager.py  vector_store.py
src/success-stories-retrival-system/utils/proxy_rag/: __init__.py  config.py  extract.py  indexer.py  openai_client.py  pg_vector_store.py  proxies.py  rag_bot.py  tree_builder.py
